Refactor Maquina class and update method calls